# robotac

./: Cargo.toml  rust-toolchain.toml
histories/: test.hist
mcts/: Cargo.toml
mcts/examples/: hundred.rs  lands.rs
mcts/src/: lib.rs  manager.rs  node.rs  policies.rs  search.rs  transposition.rs
robotac/: Cargo.toml
robotac/benches/: eval.rs  movegen.rs
robotac/examples/: moves.rs
robotac/src/: board.rs  deck.rs  eval.rs  hand.rs  history.rs  knowledge.rs  lib.rs  movegen.rs  seven.rs
tac-tui/: Cargo.toml
tac-tui/src/: ai_debug.rs  app.rs  board.rs  debug.rs  history.rs  main.rs  moves.rs  popup.rs  seed_input.rs
types/: Cargo.toml
types/src/: bitboard.rs  card.rs  color.rs  deck.rs  hand.rs  home.rs  lib.rs  square.rs  tacmove.rs
