[workspace]
members = [
  "types",
  "robotac",
  "mcts",
]
resolver = "2"

[workspace.dependencies]
enum-map = {version = "2.7.3"}
rand = {version = "0.8.5"}
rand_xorshift = {version = "0.3"}
itertools = {version = "0.12.1"}
smallvec = {version = "2.0.0-alpha.6"}
rayon = {version = "1.1"}
crossbeam = {version = "0.8.4"}

[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
incremental = true
panic = "abort"

