[workspace]
members = [
  "types",
  "robotac",
  "tac-tui",
]
resolver = "2"

[workspace.dependencies]
enum-map = {version = "2.7.3"}
rand = {version = "0.8.5"}
itertools = {version = "0.12.1"}
smallvec = {version = "2.0.0-alpha.6", features = ["serde"]}
ratatui = "*"
clap = "*"
serde = {version = "1.0.210", features = ["derive"]}
ron = "*"
criterion = "*"
mcts = {git = "https://github.com/syynis/ismcts"}

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
incremental = true
panic = "abort"

