[package]
name = "robotac"
version = "0.1.0"
edition = "2021"

[dependencies]
tac-types = {path = "../types"}
mcts = {workspace = true}
enum-map = {workspace = true}
rand = {workspace = true}
itertools = {workspace = true}
smallvec = {workspace = true}
serde = {workspace = true}
criterion = {workspace = true}

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "eval"
harness = false
